fix(ui): update z-index of choices__list--dropdown

--- a/src/core/Resources/assets/css/admin.scss
+++ b/src/core/Resources/assets/css/admin.scss
@@ -42,6 +42,7 @@ body {
 
 .choices__list--dropdown {
     display: none;
+    z-index: 3;
 }
 
 .choices__list--dropdown.is-active {
